package.json bug fixed. Added classnames for divs in leaderboard.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- Icon made by Icon Pond from www.flaticon.com  -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>Logical Guess</title>
   </head>
