--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- Icon made by Icon Pond from www.flaticon.com  -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Logical Guess</title>
   </head>
   <body>
